# Portfolio-AI

./: Regression-MedicalCostPersonalDatasets.ipynb
AGENT - CrewAI/PythonDevelopmentTeam/: README.md
AGENT - CrewAI/PythonDevelopmentTeam/output/: app.py
AGENT - LangChain/RAG/: SimpleRAG.py  main.py
ANN/: HeartAttackAnalysis&Prediction (1).ipynb
ANN/CLassification-HeartAttackAnalysis&Prediction/: HeartAttackAnalysis&Prediction.ipynb
ANN/Classification-Vectorisation&DBSCAN/: Clustering.md  exemple.csv  logs_sorted.csv  main.py
ANN/Regression-MedicalCostPersonal/: ANN-Regression-MedicalCostPersonal.ipynb
AgentRetrival/: requirements.txt
AgentRetrival/app/: gardrails.py  ingestion.py  llm.py  prompts.py  retriever.py  utils.py
CrewAI - Development Agentic Crew/: pyproject.toml
CrewAI - Development Agentic Crew/archives/run_1/: full_response.py
CrewAI - Development Agentic Crew/archives/run_1/src/api_dev_team/: crew.py  main.py
CrewAI - Development Agentic Crew/archives/run_2/: app.py  full_response.py
CrewAI - Development Agentic Crew/archives/run_2/src/api_dev_team/: crew.py
CrewAI - Development Agentic Crew/src/api_dev_team/: crew.py
Handwashing Analysis/: notebook.ipynb
Langchain - RAG/: README.md  app.py  generateStore.py  launchRag.py  requirements.txt  test.py
Simple-RAG/: README.md  SimpleRAG.py  requirements.txt
Simple-RAG/Sources/CSV/: DICOM.csv
Simple-RAG/Sources/DOCX/: Documentation.docx
projectAgent/: meetingAgent.py  meetingRaw.py
projectAgent/RAG/: chat.txt  rag.py
(+10 files in other folders)
